--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,3 +3,27 @@ html,
 body {
   @apply h-full overflow-hidden;
 }
+
+h1 {
+  @apply h1;
+}
+
+h2 {
+  @apply h2;
+}
+
+h3 {
+  @apply h3;
+}
+
+h4 {
+  @apply h4;
+}
+
+h5 {
+  @apply h5;
+}
+
+h6 {
+  @apply h6;
+}
