visual theme changes

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -5,9 +5,9 @@ body {
 }
 
 .md-header a::after {
-  @apply pl-2 text-surface-300 transition-all content-['#'];
+  @apply pl-2 text-surface-200 transition-all content-['#'] dark:text-surface-700;
 }
 
 .md-header:hover a::after {
-  @apply text-primary-800;
+  @apply text-primary-800 dark:text-primary-100;
 }
