--- a/src/app.postcss
+++ b/src/app.postcss
@@ -6,7 +6,12 @@ body {
 
 .prose {
   @apply prose-headings:font-normal prose-h2:!h2 prose-h3:!h3 prose-h4:!h4 prose-h5:!h5 prose-h6:!h6;
-  @apply prose-a:anchor prose-code:code prose-blockquote:blockquote prose-pre:pre;
+  @apply prose-a:anchor prose-blockquote:blockquote;
+  @apply prose-table:table prose-table:table-hover;
+}
+
+.prose :not(pre) > code {
+  @apply code;
 }
 
 /* vim: set ft=css: */
