fix build issues & setup adapter-auto
prose element style provided by the deprecated skeleton style

prerender determined using GITHUB_ACTIONS variable
prerender config in layout is also using the variable, which is probably
not the best idea

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -5,13 +5,7 @@ body {
 }
 
 .prose {
-  @apply prose-headings:font-normal prose-h2:!h2 prose-h3:!h3 prose-h4:!h4 prose-h5:!h5 prose-h6:!h6;
-  @apply prose-a:anchor prose-blockquote:blockquote;
-  @apply prose-table:table prose-table:table-hover;
-}
-
-.prose :not(pre) > code {
-  @apply code;
+  @apply prose-headings:font-normal;
 }
 
 .prose a.permalink {
