extract easymde conponent & changed post removal

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -45,6 +45,10 @@ body {
   @apply !bg-primary-500/20;
 }
 
+.CodeMirror-selected {
+  @apply !bg-primary-500/30;
+}
+
 .cm-comment {
   @apply font-mono text-primary-900-50-token;
 }
