--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,4 +1,9 @@
 /* Write your global styles here, in PostCSS syntax */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@tailwind variants;
+
 html,
 body {
   @apply h-full overflow-hidden;
