--- a/src/app.postcss
+++ b/src/app.postcss
@@ -6,24 +6,24 @@
 
 @layer base {
   :root {
-    --text: #0d1a1c;
-    --background: #f5fafa;
-    --primary: #314468;
-    --secondary: #e0e7f0;
-    --accent: #275c62;
+    --text: 13 26 28; /* #0d1a1c */
+    --background: 245 250 250; /* #f5fafa */
+    --primary: 49 68 104; /* #314468 */
+    --secondary: 224 231 240; /* #e0e7f0 */
+    --accent: 39 92 98; /* #275c62 */
   }
   .dark {
-    --text: #e3f0f2;
-    --background: #050a0a;
-    --primary: #97aace;
-    --secondary: #0f161f;
-    --accent: #9dd1d8;
+    --text: 227 240 242; /* #e3f0f2 */
+    --background: 5 10 10; /* #050a0a */
+    --primary: 151 170 206; /* #97aace */
+    --secondary: 15 22 31; /* #0f161f */
+    --accent: 157 209 216; /* #9dd1d8 */
   }
 }
 
 html,
 body {
-  @apply text-text bg-background h-full overflow-hidden;
+  @apply h-full overflow-hidden bg-background text-text;
 }
 
 /* prose */
