fix mobile view issues
fixed landing page secions and post view
with pre block min-width addressed

added TOC auto-hide

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -47,4 +47,8 @@ body {
   @apply rounded border-text/60 bg-transparent checked:bg-primary focus:ring-accent/60;
 }
 
+.prose pre {
+  @apply overflow-x-auto;
+}
+
 /* vim: set ft=css: */
