use noto color icon font
installed noto icon font locally
fixed opening global menu scrolling to page top
fixed withIcon action layout-changing issue

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -32,6 +32,9 @@
     @apply border border-text/80 text-text;
     @apply hover:border-text hover:shadow-glow hover:shadow-text/40 active:shadow-text/60;
   }
+  .icon-flex {
+    @apply flex items-center gap-2;
+  }
 }
 
 :root {
