add bigger blockquote font, code highlighting

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -49,6 +49,10 @@
   @apply rounded border-text/60 bg-transparent checked:bg-primary focus:ring-accent/60;
 }
 
+.prose blockquote {
+  @apply text-lg;
+}
+
 .prose pre {
   @apply overflow-x-auto;
 }
