add spoiler element extension

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -61,4 +61,8 @@
   @apply bg-secondary;
 }
 
+.prose span.spoiler {
+  @apply blur-sm transition-['filter'] hover:blur-none;
+}
+
 /* vim: set ft=css: */
