--- a/src/app.postcss
+++ b/src/app.postcss
@@ -23,12 +23,12 @@
 
 @layer components {
   .btn-accent {
-    @apply rounded p-2 transition-all;
+    @apply rounded p-2 transition-[border-color,shadow];
     @apply border border-accent/80 text-accent;
     @apply hover:border-accent hover:shadow-glow hover:shadow-accent/40 active:shadow-accent/60;
   }
   .btn-text {
-    @apply rounded p-2 transition-all;
+    @apply rounded p-2 transition-[border-color,shadow];
     @apply border border-text/80 text-text;
     @apply hover:border-text hover:shadow-glow hover:shadow-text/40 active:shadow-text/60;
   }
