add utility colors
add comments, adjust alert element description

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -11,6 +11,9 @@
     --primary: 49 68 104; /* #314468 */
     --secondary: 224 231 240; /* #e0e7f0 */
     --accent: 39 92 98; /* #275c62 */
+    --success: 149 192 48; /* #95c030 */
+    --warning: 201 156 8; /* #c99c08 */
+    --error: 218 138 134; /* #da8a86 */
   }
   .dark {
     --text: 227 240 242; /* #e3f0f2 */
@@ -18,6 +21,9 @@
     --primary: 151 170 206; /* #97aace */
     --secondary: 15 22 31; /* #0f161f */
     --accent: 157 209 216; /* #9dd1d8 */
+    --success: 164 207 63; /* #a4cf3f */
+    --warning: 247 202 54; /* #f7ca36 */
+    --error: 121 41 37; /* #792925 */
   }
 }
 
