--- a/src/app.postcss
+++ b/src/app.postcss
@@ -57,16 +57,12 @@
   @apply bg-primary/60;
 }
 
+.prose {
+  @apply prose-blockquote:text-xl prose-pre:my-0;
+}
+
 .prose input[type="checkbox"] {
   @apply rounded border-text/60 bg-transparent checked:bg-primary focus:ring-accent/60;
-}
-
-.prose blockquote {
-  @apply text-xl;
-}
-
-.prose pre {
-  @apply my-0;
 }
 
 .prose :not(pre) > code {
