add rehype-slug for slugging

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -57,6 +57,8 @@
   @apply bg-primary/60;
 }
 
+/* markdown content styles */
+
 .prose {
   @apply prose-blockquote:text-xl prose-pre:my-0;
 }
@@ -93,6 +95,8 @@
 .prose span.spoiler {
   @apply blur-sm transition-['filter'] hover:blur-none;
 }
+
+/* codeblock numbers */
 
 .prose .numbers code {
   counter-reset: step;
