--- a/src/app.postcss
+++ b/src/app.postcss
@@ -91,9 +91,9 @@
 }
 
 /* styles for external links */
-a[href^="http://"]:not([href^="http://www.tnfshcec.com"])::after,
-a[href^="https://"]:not([href^="https://www.tnfshcec.com"])::after,
-a[href^="//"]:not([href^="//www.tnfshcec.com"])::after
+.prose a[href^="http://"]:not([href^="http://www.tnfshcec.com"])::after,
+.prose a[href^="https://"]:not([href^="https://www.tnfshcec.com"])::after,
+.prose a[href^="//"]:not([href^="//www.tnfshcec.com"])::after
 {
   content: "";
   position: relative;
@@ -104,6 +104,7 @@ a[href^="//"]:not([href^="//www.tnfshcec.com"])::after
   height: 1em;
   background-color: currentColor;
   mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path d="M14 3v2h3.59l-9.83 9.83l1.41 1.41L19 6.41V10h2V3m-2 16H5V5h7V3H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7h-2v7Z"/></svg>');
+  mask-size: contain;
 }
 
 /* codeblock numbers */
