implement new colors

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -6,24 +6,24 @@
 
 @layer base {
   :root {
-    --text: 13 26 28; /* #0d1a1c */
-    --background: 245 250 250; /* #f5fafa */
-    --primary: 49 68 104; /* #314468 */
-    --secondary: 224 231 240; /* #e0e7f0 */
-    --accent: 39 92 98; /* #275c62 */
-    --success: 149 192 48; /* #95c030 */
-    --warning: 201 156 8; /* #c99c08 */
-    --error: 218 138 134; /* #da8a86 */
+    --text: 25 23 36; /* #191724 */
+    --background: 252 252 252; /* #fcfcfc */
+    --primary: 180 138 232; /* #b48ae8 */
+    --secondary: 235 234 245; /* #ebeaf5 */
+    --accent: 49 116 143; /* #31748f */
+    --success: 246 193 119; /* #f6c177 */
+    --warning: 235 188 186; /* #ebbcba */
+    --error: 235 111 146; /* #eb6f92 */
   }
   .dark {
-    --text: 227 240 242; /* #e3f0f2 */
-    --background: 5 10 10; /* #050a0a */
-    --primary: 151 170 206; /* #97aace */
-    --secondary: 15 22 31; /* #0f161f */
-    --accent: 157 209 216; /* #9dd1d8 */
-    --success: 164 207 63; /* #a4cf3f */
-    --warning: 247 202 54; /* #f7ca36 */
-    --error: 121 41 37; /* #792925 */
+    --text: 224 222 244; /* #e0def4 */
+    --background: 25 23 36; /* #191724 */
+    --primary: 196 167 231; /* #c4a7e7 */
+    --secondary: 38 35 58; /* #26233a */
+    --accent: 156 207 216; /* #9ccfd8 */
+    --success: 256 193 119; /* #f6c177 */
+    --warning: 236 188 186; /* #ebbcba */
+    --error: 236 111 146; /* #eb6f92 */
   }
 }
 
