update dark background color

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -17,7 +17,7 @@
   }
   .dark {
     --text: 224 222 244; /* #e0def4 */
-    --background: 25 23 36; /* #191724 */
+    --background: 12 11 17; /* #0c0b11 */
     --primary: 196 167 231; /* #c4a7e7 */
     --secondary: 38 35 58; /* #26233a */
     --accent: 156 207 216; /* #9ccfd8 */
